@@ -11,10 +11,10 @@
 <entry key="trayrss.time.fr">false</entry>
 <entry key="trayrss.time.tu">false</entry>
 <entry key="trayrss.time.timeframe">12:00-14:00 16:00-18:30</entry>
-<entry key="trayrss.displaycount">5</entry>
 <entry key="trayrss.time.sa">false</entry>
-<entry key="trayrss.time.su">false</entry>
+<entry key="trayrss.displaycount">5</entry>
 <entry key="trayrss.time.vacationstart"/>
+<entry key="trayrss.time.su">false</entry>
 <entry key="trayrss.displaycout">5</entry>
 <entry key="trayrss.time.th">true</entry>
 </properties>
